--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,4 +10,4 @@ github: alvaroreis
 # issuehunt: # Replace with a single IssueHunt username
 # otechie: # Replace with a single Otechie username
 # lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: [[Nubank](https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY)]
+custom: [https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY]
