feat: update FUNDING

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 github: alvaroreis
-custom: ['[Nubank](https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY)']
+custom: ['https://nubank.com.br/pagar/4ca3x/0fyqDWa5qY']
 
 # github: alvaroreis
 # patreon: # Replace with a single Patreon username
